tests/invalid/for_loop_heterogeneous_tuple/main.py
def run_case() -> None:
    t: tuple[int, str] = (1, "hello")

    for x in t:
        print(x)

if __name__ == "__main__":
    run_case()
